feat: implemeted tenant registration
