# routes/api.php
@@ -4,6 +4,7 @@ use App\Constants\Roles;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\PlaceholderController;
+use App\Http\Controllers\Auth\TenantAuthController;
 
 /*
 |--------------------------------------------------------------------------
@@ -20,8 +21,10 @@ Route::middleware(['auth:api', 'role:' . Roles::TENANT])->prefix('v1')->group(fu
     // 
 });
 
+Route::prefix('v1')->group(function () {
+    Route::post('/tenant/register', [TenantAuthController::class, 'register']);
+});
+
 Route::middleware(['auth:api', 'role:' . Roles::LANDLORD])->prefix('v1')->group(function () {
     // 
 });
-
-Route::get('/placeholder', [PlaceholderController::class, 'placeholder']);
